Mon Mar  8 13:35:32 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* regparse.c (parse_exp): need to separate initialization for bcc32.
	  [ruby-dev:23169]

	* oniguruma.h (ONIG_EXTERN): check __GNUC__ instead of __CYGWIN__.

Mon Mar  8 01:05:55 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/config.rb (WEBrick::Config::HTTP): rename :RequestHander
	  to :RequestCallback and add new option :ServerAlias.

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): use
	  :RequestCallback and warn if :RequestHandler is in server's option.

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should print
	  error message for WEBrick::HTTPSataus::Error.

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#lookup_server): 
	  lookup for hostname from :ServerAlias if the req.host is not match
	  to :ServerName.

	* lib/webrick/httpservlet.rb (WEBrick::HTTPServlet::CGIHandler#do_GET):
	  use $?.exitstatus and refine log message.

Sun Mar  7 16:22:26 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* Makefile.in (lex.c): use $? instead of $<.

	* lib/pstore.rb (commit_new): use FileUtils.copy_stream for Cygwin.
	  [ruby-dev:23157]

Sun Mar  7 05:34:42 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: HTTPHeader keeps its header fields as an array.

	* lib/net/http.rb: new method HTTPHeader#add_header, get_fields.

	* lib/net/http.rb: new method HTTPHeader#content_length=.

	* lib/net/http.rb: new method HTTPHeader#content_type, main_type,
	  sub_type, type_params, content_type=, set_content_type.

	* lib/net/http.rb (HTTPHeader#basic_encode): result of pack(m) may
	  contain multiple LFs.

Sun Mar  7 03:11:00 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: new method Net::HTTPRequest#body(=).

	* lib/net/http.rb: new method Net::HTTPRequest#body_stream(=).

Sun Mar  7 02:06:07 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: spin off https code again.

	* lib/net/https.rb: new file.
